2006-07-20  Srinivasa Ragavan  <sragavan@novell.com>

	* em-format-html-display.c: (efhd_attachment_bar_refresh): Modified
	the mnemonics for avoiding the conflict with search.

2006-07-19  Johnny Jacob  <jjohnny@novell.com>

	** Fix for bug #347993
	
	* em-folder-browser.c : Changed default scope of search to
	'Current Folder'

2006-07-14 Raghavendran R <raghavguru7@gmail.com>

	** Fix for bug #330355

	 * em-mailer-prefs.c:Mailer Preferences. New mail notification,
	"specify filename" was enabled for radNotifyNot and radNotifyBeep.
	Disable the button, when it wasnt for button.

2006-06-10 Shree Krishnan <shreekrishnan@gmail.com>

	** Fix for bug #338442
	* mail-config.glade: Set the mnemonic character for "Send message receipts" 

2006-07-18  Andre Klapper  <a9016009@gmx.de>

	* message-tags.glade: remove "*" from translation. Fixes bug #331147.

2006-07-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #336963

	* em-folder-browser.c: (emfb_init): Make the scrollbar automatic.

2006-22-06 Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #335241

	* mail-send-recv.c: a scroll box added for the send recv popup dialog.

2006-07-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #335747

	* em-folder-browser.c: (emfb_mark_all_read): Prompt optionally while
	marking multiple messages.
	* evolution-mail.schemas.in.in: Added a schema for prompting while
	marking multiple messages.

2006-07-13  Andre Klapper  <a9016009@gmx.de>

	* mail-config.glade: remove empty strings from translation

2006-07-11  Karsten Bräckelmann  <guenther@rudersport.de>

	* em-folder-view.c: Change mnemonic for Mark as Unimportant, fixes
	bug #347246.

2006-07-11  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #246235.
	* em-vfolder-rule.c (get_widget): Deleted the option menu and
	replaced with radio buttons.
	* mail-dialogs.glade: Removed option menu and added radio buttons

2006-07-11  Johnny Jacob  <johnnyjacob@gmail.com>

	** Fixes Bug # 324241
